--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,7 @@
     <button id='addJokeButton'>Add Joke</button>
     <h2>Jokes:</h2>
     <div id='outputDiv'>
+      <!-- Jokes will show here -->
     </div>
   </body>
 </html>
